--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FIN-tasks - Local-first task management application" />
-    <title>FIN-tasks</title>
+    <meta name="description" content="tick-task - Local-first task management application" />
+    <title>tick-task</title>
   </head>
   <body>
     <div id="root"></div>
